# format_breaker

./: LICENSE  README.md  _version.py  examples.py  format_breaker.py  pyproject.toml  tests.py  util.py
docs/: conf.py  index.rst
docs/source/: formatbreaker.rst  modules.rst
examples/: examples.py
src/formatbreaker/: Contexttest.py  __init__.py  basictypes.py  bitbool  bitwisebytes.py  core.py  datasource.py  decoders.py  exceptions.py  extras.py  numbers.py  util.py
tests/: test_basictypes.py  test_bitwisebytes.py  test_core.py  test_datasource.py  test_decoders.py  test_util.py
