[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "formatbreaker"
description = "Declarative Binary Data Parsing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dynamic = ["version"]

authors = [
  { name = "John Ranson", email = "john@phaselead.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Disassemblers",
]

[project.urls]
Source = "https://github.com/johnranson/formatbreaker"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]